always display y scrollbar to avoid layout shifting when it appears/disappears

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,9 +1,13 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
   margin: 0;
 }
 
 #container {
-  position: middle;
+  horizontal-align: middle;
   margin: 0 auto;
   border-style: solid;
   border-width: 0px;
